# claude-for-linux

./: LICENSE  README.md  eslint.config.js  index.html  install.sh  package-lock.json  package.json
.github/workflows/: check.yml  release.yml
docs/: index.html
scripts/: bump-version.sh
src/: App.css  App.tsx  GitPanel.tsx  RemotePanel.tsx  SshPanel.tsx  Terminal.tsx  i18n.ts  types.ts  usePrompt.tsx  useToast.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  git.rs  lib.rs  main.rs  proxy.rs  pty.rs  remote.rs  secrets.rs  settings.rs  sys.rs  util.rs
src/components/: ChatView.tsx  CwdBar.tsx  SavedChips.tsx  SettingsModal.tsx  TabStrip.tsx
