[package]
name = "claude-linux"
version = "0.5.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_linux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
portable-pty = "0.8"
base64 = "0.22"
# SFTP (over SSH) — vendored openssl so the build doesn't need system libssh2/openssl
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
# FTP / FTPS
suppaftp = { version = "6", features = ["native-tls"] }

